--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-28  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-03-26  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
