--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -126,7 +126,7 @@ msgstr "无法添加徽标"
 
 #: components/emblem/nautilus-emblem-view.c:744
 msgid "None of the files could be added as emblems."
-msgstr "无法将任意一个文件添加为徽标。"
+msgstr "无法将任何一个文件添加为徽标。"
 
 #: components/emblem/nautilus-emblem-view.c:765
 #: components/emblem/nautilus-emblem-view.c:790
@@ -3776,11 +3776,11 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
-"文件名“%s”表明文件的类型为“%s”。但此文件的内容表明文件的类型为“%s”。如果您打"
+"文件名“%s”表明此文件的类型为“%s”。但此文件的内容表明文件的类型为“%s”。如果您打"
 "开了这个文件，可能对您的系统是一个安全隐患。\n"
 "\n"
-"请不要打开文件，除非使您自己创建的文件，或者是是可信任的人发来的文件。要打开"
-"文件，请将文件重名名为正确的扩展名“%s”，然后按通常的方法打开该文件。当然，使"
+"请不要打开此文件，除非是您自己创建的文件，或者是可信任的人发来的文件。要打开"
+"此文件，请将文件重命名为正确的扩展名“%s”，然后按通常的方法打开该文件。当然，使"
 "用打开方式菜单可以选择用指定的应用程序打开文件。"
 
 #: src/file-manager/fm-directory-view.c:4293
@@ -3795,7 +3795,7 @@ msgstr "根据模板“%s”创建文档"
 
 #: src/file-manager/fm-directory-view.c:4711
 msgid "All executable files in this folder will appear in the Scripts menu."
-msgstr "该文件夹中的所有执行文件将显示在脚本菜单中。"
+msgstr "该文件夹中所有的可执行文件都将显示在脚本菜单中。"
 
 #: src/file-manager/fm-directory-view.c:4713
 msgid ""
@@ -3978,12 +3978,12 @@ msgstr "链接已经损坏。您要将该链接移动到回收站中吗？"
 
 #: src/file-manager/fm-directory-view.c:5876
 msgid "This link can't be used, because it has no target."
-msgstr "无法使用该链接，因为它没有目标。"
+msgstr "无法使用此链接，因为它没有目标。"
 
 #: src/file-manager/fm-directory-view.c:5878
 #, c-format
 msgid "This link can't be used, because its target \"%s\" doesn't exist."
-msgstr "无法使用该链接，因为其目标“%s”不存在。"
+msgstr "无法使用此链接，因为其目标“%s”不存在。"
 
 #: src/file-manager/fm-directory-view.c:5883
 msgid "Broken Link"
@@ -4028,7 +4028,7 @@ msgstr "取消打开？"
 #, c-format
 msgid ""
 "You do not have the permissions necessary to view the contents of \"%s\"."
-msgstr "您没有查看“%s”的内容所必需的权限。"
+msgstr "您没有查看“%s”的内容所需的权限。"
 
 #: src/file-manager/fm-error-reporting.c:61
 #, c-format
@@ -4063,7 +4063,7 @@ msgstr "该文件夹中没有“%s”。也许它刚被移动或删除？"
 #: src/file-manager/fm-error-reporting.c:113
 #, c-format
 msgid "You do not have the permissions necessary to rename \"%s\"."
-msgstr "您没有重命名“%s”所必需的权限。"
+msgstr "您没有重命名“%s”所需的权限。"
 
 #: src/file-manager/fm-error-reporting.c:118
 #, c-format
@@ -4251,12 +4251,12 @@ msgstr "为此文件夹中要显示的信息选择顺序。"
 
 #: src/file-manager/fm-properties-window.c:477
 msgid "You can't assign more than one custom icon at a time!"
-msgstr "您不能一次指定多个定制图标！"
+msgstr "您不能一次指定多个自定义图标！"
 
 #: src/file-manager/fm-properties-window.c:478
 #: src/nautilus-information-panel.c:507
 msgid "Please drag just one image to set a custom icon."
-msgstr "请仅拖放一个图像文件来设置定制图标。"
+msgstr "请仅拖放一个图像文件来设置自定义图标。"
 
 #: src/file-manager/fm-properties-window.c:479
 #: src/nautilus-information-panel.c:508
@@ -4272,7 +4272,7 @@ msgstr "您拖放的文件不是本地文件。"
 #: src/file-manager/fm-properties-window.c:496
 #: src/nautilus-information-panel.c:528
 msgid "You can only use local images as custom icons."
-msgstr "您只能使用本地的图像文件作为定制图标。"
+msgstr "您只能使用本地的图像文件作为自定义图标。"
 
 #: src/file-manager/fm-properties-window.c:490
 #: src/nautilus-information-panel.c:529
@@ -4301,19 +4301,19 @@ msgstr "%s 属性"
 
 #: src/file-manager/fm-properties-window.c:1378
 msgid "Cancel Group Change?"
-msgstr "取消群组改动？"
+msgstr "取消群组更改？"
 
 #: src/file-manager/fm-properties-window.c:1379
 msgid "Changing group."
-msgstr "改变群组。"
+msgstr "更改群组。"
 
 #: src/file-manager/fm-properties-window.c:1540
 msgid "Cancel Owner Change?"
-msgstr "取消所有者改动？"
+msgstr "取消所有者更改？"
 
 #: src/file-manager/fm-properties-window.c:1541
 msgid "Changing owner."
-msgstr "改变所有者。"
+msgstr "更改所有者。"
 
 #: src/file-manager/fm-properties-window.c:1747
 msgid "nothing"
@@ -4410,11 +4410,11 @@ msgstr "访问："
 
 #: src/file-manager/fm-properties-window.c:2327
 msgid "_Select Custom Icon..."
-msgstr "选择定制图标(_S)..."
+msgstr "选择自定义图标(_S)..."
 
 #: src/file-manager/fm-properties-window.c:2333
 msgid "_Remove Custom Icon"
-msgstr "删除定制图标(_R)"
+msgstr "删除自定义图标(_R)"
 
 #: src/file-manager/fm-properties-window.c:2679
 msgid "_Read"
@@ -5365,11 +5365,11 @@ msgstr ""
 
 #: src/nautilus-information-panel.c:506
 msgid "You can't assign more than one custom icon at a time."
-msgstr "您不能一次指定多个定制图标。"
+msgstr "您不能一次指定多个自定义图标。"
 
 #: src/nautilus-information-panel.c:535
 msgid "You can only use images as custom icons."
-msgstr "您只能使用图像文件作为定制图标。"
+msgstr "您只能使用图像文件作为自定义图标。"
 
 #: src/nautilus-information-panel.c:882
 #, c-format
