Updated Catalan translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-30  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation by
+	Aleix Badia i Bosch <abadia@ica.es> and me.
+
 2004-03-28  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
