Use correct icon for filesystem.
2004-03-30  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-tree-view.c (create_tree):
	Use correct icon for filesystem.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-30  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-tree-view.c (create_tree):
+	Use correct icon for filesystem.
+
 2004-03-29  Dave Camp  <dave@ximian.com>
 
 	* src/nautilus-application.c:
