Fix stupid typo in Welsh translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-30  Dafydd Harries  <daf@muse.19inch.net>
+
+	* cy.po: Update stupid typo in the Welsh translation.
+
 2004-03-30  Adam Weinberger <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
