--- a/po/cy.po
+++ b/po/cy.po
@@ -3599,7 +3599,7 @@ msgstr "Gweld eich plygell cartred yn y trefnydd ffeiliau Nautilus"
 
 #: nautilus.desktop.in.h:1
 msgid "Browse Filesystem"
-msgstr "Pori's System Ffeiliau"
+msgstr "Pori'r System Ffeiliau"
 
 #: nautilus.desktop.in.h:2
 msgid "Browse the filesystem with the file manager"
