--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-30  Dave Camp  <dave@ximian.com>
+
+	* src/file-manager/fm-directory-view.c: (activate_callback),
+	(activate_activation_uri_ready_callback): Fix a couple
+	of file/memory leaks.
+
 2004-03-30  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-properties-window.c:
