Added "af" to ALL_LINGUAS. Added Afrikaans translation by Zuza Software
2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.
	* af.po: Added Afrikaans translation by
	Zuza Software Foundation <info@translate.org.za>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-31  Christian Rose  <menthos@menthos.com>
+
+	* af.po: Added Afrikaans translation by
+	Zuza Software Foundation <info@translate.org.za>.
+
 2004-03-30  Dafydd Harries  <daf@muse.19inch.net>
 
 	* cy.po: Update stupid typo in the Welsh translation.
