--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-31  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "af" to ALL_LINGUAS.
+
 2004-03-30  Dave Camp  <dave@ximian.com>
 
 	* src/file-manager/fm-directory-view.c: (activate_weak_notify),
