Fill in the dialog with requesting window's location.
2004-03-31  Dave Camp  <dave@ximian.com>

	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
	Fill in the dialog with requesting window's location.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-31  Dave Camp  <dave@ximian.com>
+
+	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
+	Fill in the dialog with requesting window's location.
+
 2004-03-31  Alexander Larsson  <alexl@redhat.com>
 
         Based on patch from Soeren Sandmann:
