--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-01  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-factory.c (load_icon_file):
+	Fix thumbnail scaling typo.
+
 2004-03-31  Dave Camp  <dave@ximian.com>
 
 	* src/nautilus-location-dialog.c: (nautilus_location_dialog_new):
