--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-01  Dave Camp  <dave@ximian.com>
+
+	* src/nautilus-spatial-window.c:
+	(nautilus_spatial_window_set_location_button),
+	(nautilus_spatial_window_instance_init): Add an down arrow to the
+	location button in an attempt to make it look more like a 
+	pulldown menu.
+
 2004-04-01  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-factory.c (load_icon_file):
