Monitor NAUTILUS_FILE_ATTRIBUTE_SLOW_MIME_TYPE.
2004-04-01  Dave Camp  <dave@ximian.com>

	* src/nautilus-window.c: (nautilus_window_set_viewed_file):
	Monitor NAUTILUS_FILE_ATTRIBUTE_SLOW_MIME_TYPE.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-01  Dave Camp  <dave@ximian.com>
 
+	* src/nautilus-window.c: (nautilus_window_set_viewed_file):
+	Monitor NAUTILUS_FILE_ATTRIBUTE_SLOW_MIME_TYPE.
+	
+2004-04-01  Dave Camp  <dave@ximian.com>
+
 	* src/nautilus-spatial-window.c:
 	(nautilus_spatial_window_set_location_button),
 	(nautilus_spatial_window_instance_init): Add an down arrow to the
