Fixed bug #138867 in the Swedish translation.
2004-04-02  Christian Rose  <menthos@menthos.com>

	* sv.po: Fixed bug #138867 in the Swedish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-02  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Fixed bug #138867 in the Swedish translation.
+
 2004-03-31  Christian Rose  <menthos@menthos.com>
 
 	* af.po: Added Afrikaans translation by
