Updated British English translation

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-22 19:48-0500\n"
-"PO-Revision-Date: 2004-03-22 19:49-0500\n"
+"PO-Revision-Date: 2004-04-02 18:25-0500\n"
 "Last-Translator: Gareth Owen <gowen72@yahoo.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -385,7 +385,7 @@ msgstr "Burlap"
 
 #: data/browser.xml.h:11
 msgid "C_olors"
-msgstr "C_olors"
+msgstr "C_olours"
 
 #: data/browser.xml.h:12
 msgid "Camera"
@@ -5343,7 +5343,7 @@ msgstr "Ask before _emptying the Wastebasket or deleting files"
 
 #: src/nautilus-file-management-properties.glade.h:39
 msgid "Behavior"
-msgstr "Behavior"
+msgstr "Behaviour"
 
 #: src/nautilus-file-management-properties.glade.h:45
 msgid ""
