--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-02  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Fixed small typo
+
 2004-04-03  Mugurel Tudor  <mugurelu@go.ro>
 
 	* ro.po: Updated Romanian translation
