--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-03  Samúel Jón Gunnarsson  <sammi@techattack.nu>
+
+	* is.po: Updated Icelandic translation by 
+	Helgi Þormar Þorbjörnsson  <helgi@trance.is>
+	
 2004-04-02  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Fixed small typo
