--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-04  Christian Neumair  <chris@gnome-de.org>
+
+	* src/file-manager/nautilus-icon-view-ui.xml: Remove separator between
+	manual and automatic layout menu items (fixes #110197).
+
 2004-04-01  Dave Camp  <dave@ximian.com>
 
 	* libnautilus-private/nautilus-icon-container.c: (keyboard_space),
