Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,12 @@
+2004-04-06  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2004-04-03  Samúel Jón Gunnarsson  <sammi@techattack.nu>
 
 	* is.po: Updated Icelandic translation by 
 	Helgi Þormar Þorbjörnsson  <helgi@trance.is>
-	
+
 2004-04-02  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Fixed small typo
