--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-07  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/file-manager/fm-directory-view.c (volume_or_drive_unmounted_callback):
+        Interchange Eject & Unmount error dialog titles (#139260).
+
 2004-04-04  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/nautilus-icon-view-ui.xml: Remove separator between
