Allow delete key to remove bookmarks, fixes #136452
2004-04-07  Xan Lopez  <xan@gnome.org>

        * src/nautilus-bookmarks-window.c: (create_bookmarks_window),
        (bookmarks_delete_bookmark), (on_remove_button_clicked),
        (on_key_pressed), (repopulate):

        Allow delete key to remove bookmarks, fixes #136452

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-07  Xan Lopez  <xan@gnome.org>
+
+	* src/nautilus-bookmarks-window.c: (create_bookmarks_window),
+	(bookmarks_delete_bookmark), (on_remove_button_clicked),
+	(on_key_pressed), (repopulate):
+
+        Allow delete key to remove bookmarks, fixes #136452
+
 2004-04-07  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-directory-view.c (volume_or_drive_unmounted_callback):
