Make min height/width smaller for spatial windows.
2004-04-07  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-manage-views.c:
	(position_and_show_window_callback):
	* src/nautilus-window-private.h:
	* src/nautilus-window.c: (set_initial_window_geometry):
	Make min height/width smaller for spatial windows.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-07  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-window-manage-views.c:
+	(position_and_show_window_callback):
+	* src/nautilus-window-private.h:
+	* src/nautilus-window.c: (set_initial_window_geometry):
+	Make min height/width smaller for spatial windows.
+
 2004-04-07  Xan Lopez  <xan@gnome.org>
 
 	* src/nautilus-bookmarks-window.c: (create_bookmarks_window),
