--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-08  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-04-06  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
