--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-04-08  James Willcox  <jwillcox@gnome.org>
+
+	* src/nautilus-navigation-window.c:
+	(nautilus_navigation_window_show):
+	* src/nautilus-spatial-window.c: (nautilus_spatial_window_show):
+	* src/nautilus-window.c: (nautilus_window_show):
+
+        Always show the status bar if the window is a spatial one.
+	Fixes 138967.
+
 2004-04-07  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-program-choosing.c:
