Updated British English translation

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-22 19:48-0500\n"
-"PO-Revision-Date: 2004-04-02 18:25-0500\n"
+"PO-Revision-Date: 2004-04-08 19:51-0400\n"
 "Last-Translator: Gareth Owen <gowen72@yahoo.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -918,11 +918,11 @@ msgstr "System Settings"
 
 #: icons/crux_eggplant/crux_eggplant.xml.h:1
 msgid "An Eggplant variation of the Crux theme."
-msgstr "An Eggplant variation of the Crux theme."
+msgstr "An Aubergine variation of the Crux theme."
 
 #: icons/crux_eggplant/crux_eggplant.xml.h:2
 msgid "Crux-Eggplant"
-msgstr "Crux-Eggplant"
+msgstr "Crux-Aubergine"
 
 #: icons/crux_teal/crux_teal.xml.h:1
 msgid "A Teal variation of the Crux theme."
