--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-08  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Updated British English tranlsation (bug 138758)
+
 2004-04-08  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
