added gujarati translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
+
 2004-04-08  James Willcox  <jwillcox@gnome.org>
 
 	* src/nautilus-navigation-window.c:
