--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+        * gu.po: Added Gujurati translation by
+        Gujarati Team <magnet@magnet-i.com>.
+
 2004-04-08  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English tranlsation (bug 138758)
