Add a *Shift*BackSpace keybinding for the UpCloseParent verb. Fixes
2004-04-09  James Willcox  <jwillcox@gnome.org>

	* src/nautilus-spatial-window-ui.xml:  Add a *Shift*BackSpace keybinding
	for the UpCloseParent verb.  Fixes 139375.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-09  James Willcox  <jwillcox@gnome.org>
+
+	* src/nautilus-spatial-window-ui.xml:  Add a *Shift*BackSpace keybinding
+	for the UpCloseParent verb.  Fixes 139375.
+
 2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
